--- a/packages/pack/package.json
+++ b/packages/pack/package.json
@@ -21,9 +21,10 @@
   "dependencies": {
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
-    "@mini-architecture/utils": "^0.0.1",
+    "@mini-architecture/utils": "^0.0.0",
     "archiver": "^4.0.1",
     "babel-preset-minify": "^0.5.1",
+    "chalk": "^4.1.0",
     "concat-with-sourcemaps": "^1.1.0",
     "ejs": "^3.1.3",
     "fs-extra": "^9.0.1",
