--- a/packages/framework/package.json
+++ b/packages/framework/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mini-architecture/framework",
-  "version": "0.0.5",
+  "version": "0.0.6-beta.0",
   "description": "",
   "scripts": {
     "dev": "rm -rf dist && rollup -cw",
@@ -17,7 +17,7 @@
     "url": "git+https://github.com/lawler61/mini-architecture.git"
   },
   "dependencies": {
-    "@mini-architecture/utils": "^0.0.0",
+    "@mini-architecture/utils": "^0.0.1",
     "@polymer/polymer": "^3.4.1",
     "core-js": "^3.6.5",
     "hammerjs": "^2.0.8",
