--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "rm -rf dist && tsc -p . -w",
-    "build": "rm -rf dist && tsc -p .",
-    "lint": "tsc --noEmit --skipLibCheck -p tsconfig.json"
+    "dev": "rm -rf dist && tsc -w",
+    "build": "rm -rf dist && tsc",
+    "lint": "tsc --noEmit --skipLibCheck"
   },
   "bin": {
     "ma-cli": "bin/index.js"
@@ -16,6 +16,9 @@
   ],
   "author": "lawler61",
   "license": "ISC",
+  "publishConfig": {
+    "access": "public"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/lawler61/mini-architecture.git"
@@ -27,8 +30,8 @@
     "@mini-architecture/pack": "^0.0.7-beta.2",
     "@mini-architecture/utils": "^0.0.1",
     "chalk": "^4.1.0",
-    "commander": "^6.1.0",
-    "fs-extra": "^9.0.1",
+    "commander": "^6.2.1",
+    "fs-extra": "^9.1.0",
     "ignore-by-default": "^2.0.0"
   }
 }
