--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -10,13 +10,16 @@
     "build:server": "rm -rf dist && tsc -p tsconfig.build.json",
     "build:client": "rm -rf dist/client && parcel build client/index.html -d dist/client --no-cache",
     "build": "yarn build:server && yarn build:client",
-    "lint": "tsc --noEmit --skipLibCheck -p tsconfig.json"
+    "lint": "tsc --noEmit --skipLibCheck"
   },
   "author": "lawler61",
   "license": "ISC",
   "files": [
     "dist"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/lawler61/mini-architecture.git"
@@ -25,8 +28,8 @@
     "@mini-architecture/utils": "^0.0.1",
     "chalk": "^4.1.0",
     "chrome-launcher": "^0.13.4",
-    "chrome-remote-interface": "^0.28.2",
-    "ejs": "^3.1.3",
+    "chrome-remote-interface": "^0.30.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-ws": "^4.0.0",
     "get-port": "^5.1.1",
@@ -35,12 +38,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
-    "babel-plugin-module-resolver": "^4.0.0",
-    "less": "^3.12.2",
-    "open": "^7.3.0",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "less": "^3.13.1",
+    "open": "^8.0.6",
     "parcel-bundler": "^1.12.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-modal": "^3.11.2"
+    "react-modal": "^3.13.1"
   }
 }
