--- a/packages/framework/package.json
+++ b/packages/framework/package.json
@@ -12,6 +12,9 @@
   "files": [
     "dist"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/lawler61/mini-architecture.git"
@@ -19,20 +22,20 @@
   "dependencies": {
     "@mini-architecture/utils": "^0.0.1",
     "@polymer/polymer": "^3.4.1",
-    "core-js": "^3.6.5",
+    "core-js": "^3.10.1",
     "hammerjs": "^2.0.8",
-    "regenerator-runtime": "^0.13.5"
+    "regenerator-runtime": "^0.13.7"
   },
   "devDependencies": {
-    "@rollup/plugin-babel": "^5.0.4",
-    "@rollup/plugin-commonjs": "^13.0.0",
-    "@rollup/plugin-image": "^2.0.5",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^13.0.2",
+    "@rollup/plugin-image": "^2.0.6",
     "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^8.1.0",
-    "@rollup/plugin-replace": "^2.3.3",
-    "@webcomponents/webcomponentsjs": "^2.4.3",
+    "@rollup/plugin-node-resolve": "^8.4.0",
+    "@rollup/plugin-replace": "^2.3.4",
+    "@webcomponents/webcomponentsjs": "^2.5.0",
     "polymer-cli": "^1.9.11",
-    "rollup": "^2.18.2",
+    "rollup": "^2.29.0",
     "rollup-plugin-terser": "^6.1.0"
   }
 }
