--- a/packages/pack/package.json
+++ b/packages/pack/package.json
@@ -5,8 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "scripts/dev.ts",
-    "build": "rm -rf dist && tsc -p .",
-    "lint": "tsc --noEmit --skipLibCheck -p tsconfig.json"
+    "build": "rm -rf dist && tsc",
+    "lint": "tsc --noEmit --skipLibCheck"
   },
   "author": "lawler61",
   "license": "ISC",
@@ -14,6 +14,9 @@
     "dist",
     "templates"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/lawler61/mini-architecture.git"
@@ -22,12 +25,12 @@
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
     "@mini-architecture/utils": "^0.0.1",
-    "archiver": "^4.0.1",
+    "archiver": "^4.0.2",
     "babel-preset-minify": "^0.5.1",
     "chalk": "^4.1.0",
     "concat-with-sourcemaps": "^1.1.0",
-    "ejs": "^3.1.3",
-    "fs-extra": "^9.0.1",
+    "ejs": "^3.1.6",
+    "fs-extra": "^9.1.0",
     "glob": "^7.1.6",
     "html-minifier": "^4.0.0"
   }
