--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "target": "esnext",
     "module": "commonjs",
-    "moduleResolution": "node",
     "lib": ["dom", "esnext"],
+    "moduleResolution": "node",
     // "noEmit": true,
     // "allowJs": true,                          /* Allow javascript files to be compiled. */
     "strict": true,
@@ -16,6 +16,7 @@
     "resolveJsonModule": true,
     "removeComments": true,
     "sourceMap": false,
+    "esModuleInterop": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true
   },
