--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mini-architecture/cli",
-  "version": "0.0.7-beta.2",
+  "version": "0.0.7",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -25,11 +25,11 @@
     "url": "git+https://github.com/lawler61/mini-architecture.git"
   },
   "dependencies": {
-    "@mini-architecture/devtools": "^0.0.2-beta.2",
-    "@mini-architecture/framework": "^0.0.6-beta.0",
-    "@mini-architecture/mini": "^0.0.5",
-    "@mini-architecture/pack": "^0.0.7-beta.2",
-    "@mini-architecture/utils": "^0.0.1",
+    "@mini-architecture/devtools": "^0.0.2",
+    "@mini-architecture/framework": "^0.0.6",
+    "@mini-architecture/mini": "^0.0.6",
+    "@mini-architecture/pack": "^0.0.7",
+    "@mini-architecture/utils": "^0.0.2",
     "chalk": "^4.1.0",
     "commander": "^6.2.1",
     "fs-extra": "^9.1.0",
