--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mini-architecture/devtools",
-  "version": "0.0.2-beta.2",
+  "version": "0.0.2",
   "description": "",
   "main": "dist/launch.js",
   "scripts": {
@@ -25,7 +25,7 @@
     "url": "git+https://github.com/lawler61/mini-architecture.git"
   },
   "dependencies": {
-    "@mini-architecture/utils": "^0.0.1",
+    "@mini-architecture/utils": "^0.0.2",
     "chalk": "^4.1.0",
     "chrome-launcher": "^0.13.4",
     "chrome-remote-interface": "^0.30.0",
