--- a/packages/framework/package.json
+++ b/packages/framework/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mini-architecture/framework",
-  "version": "0.0.6-beta.0",
+  "version": "0.0.6",
   "description": "",
   "scripts": {
     "dev": "rm -rf dist && rollup -cw",
@@ -20,7 +20,7 @@
     "url": "git+https://github.com/lawler61/mini-architecture.git"
   },
   "dependencies": {
-    "@mini-architecture/utils": "^0.0.1",
+    "@mini-architecture/utils": "^0.0.2",
     "@polymer/polymer": "^3.4.1",
     "core-js": "^3.10.1",
     "hammerjs": "^2.0.8",
