--- a/packages/pack/package.json
+++ b/packages/pack/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mini-architecture/pack",
-  "version": "0.0.7-beta.2",
+  "version": "0.0.7",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -24,7 +24,7 @@
   "dependencies": {
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
-    "@mini-architecture/utils": "^0.0.1",
+    "@mini-architecture/utils": "^0.0.2",
     "archiver": "^4.0.2",
     "babel-preset-minify": "^0.5.1",
     "chalk": "^4.1.0",
